Fixed - sidebar responsive on mobile

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,7 +1,6 @@
 .sideBar {
   width: 45px;
   height: auto;
-  display: flex;
   flex-direction: column;
   position: fixed;
   right: 75px;
